src/style.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

body {
  font-family: "Vollkorn", serif;
  font-weight: 400;
}

#content {
  height: 100vh;

  display: flex;
  flex-direction: column;
  gap: 32px;

  background-image: url("./planet.jpg");
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

header,
main,
footer {
  padding: 16px 32px;
}

h1,
h3 {
  font-family: "Rakkas", cursive;
  font-weight: 400;
  text-transform: capitalize;
}

h1 span {
  color: #d43959;
}

main {
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  gap: 48px;
}

form,
.data {
  width: 480px;
}

form {
  display: flex;
  flex-direction: column;
  gap: 16px;
}

input,
button {
  appearance: none;
  border: 1px solid;
  border-radius: 4px;

  font-family: inherit;
  font-size: 100%;
  letter-spacing: 0.5px;
  text-transform: capitalize;
}

input {
  padding: 4px 8px;
}

input:focus {
  outline: none;
  border: 1px solid #e6c065;
}

button {
  align-self: center;
  font-weight: 900;
  padding: 8px 32px;
  cursor: pointer;
  background: none;
  border: none;
  background-color: #d48539;
}

.data {
  display: flex;
  justify-content: space-around;
  align-items: center;
  height: 100%;
  background-color: rgba(230, 192, 101, 0.3);
  border-radius: 5px;
  font-size: 24px;
}

.temp-container {
  display: flex;
  gap: 16px;
}

.temp {
  font-size: 84px;
}

.temp {
  font-weight: 500;
  letter-spacing: -0.7px;
  line-height: 1.07;
}

.after-temp {
  font-size: 24px;
  line-height: 1.28;
  margin-left: -40px;
  opacity: 0.6;
}

.temp-detail {
  display: flex;
  flex-direction: column;
  font-weight: 800;
  gap: 16px;
  padding: 32px;
  border-radius: 5px;
  border: 5px solid #d43959;
}

.temp-detail p {
  text-transform: capitalize;
}

footer {
  font-weight: 700;
  font-size: 14px;
  text-transform: capitalize;
  text-align: center;
}

